# fin-lakehouse-ml-signals

./: .gitignore  .pre-commit-config.yaml  .trivy.auto.tfvars  .trivyignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  scaffold_infra.sh
.github/workflows/: ci.yml
dags/: build_ml_features_dag.py  curated_market_dq_dag.py  s3_ingestion_dag.py  transform_market_data_dag.py
features/: features_v1.py
gx/: great_expectations.yml
gx/checkpoints/: curated_market_ckpt.yml  feature_checkpoint.yml
gx/expectations/: .ge_store_backend_id  curated_market_suite.json  feature_suite.json
infra/: .tflint.hcl  .trivyignore
infra/dev/: .terraform.lock.hcl  backend.tf  cf_docs.tf  main.tf  output.tf  terraform.tfstate.1752841255.backup  terraform.tfstate.1752841265.backup  terraform.tfvars  tfplan  variables.tf  versions.tf
infra/modules/bucket_curated/: main.tf  outputs.tf  variables.tf
infra/modules/bucket_raw/: main.tf  outputs.tf  variables.tf
infra/modules/iam_ci/: main.tf
infra/modules/network/: main.tf
infra/modules/s3_bucket/: main.tf  outputs.tf  variables.tf
roles/: trust.json
scripts/: bootstrap.sh  create_checkpoint.py  create_expectations.py  ingest_yfinance_to_s3.py  validate_curated.py
tests/: test_features_v1_duckdb.py
